hphp/hack/test/typecheck/coeffects/conformance/capability_as_context.php.exp
File "capability_as_context.php", line 4, characters 3-32:
Illegal context: `\HH\Capabilities\WriteProperty`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
