hphp/hack/test/typecheck/coeffects/conformance/capability_as_context.php
<?hh

function banned_externally_but_not_in_tests()[
  \HH\Capabilities\WriteProperty
]: void {}
